# vibe-quant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt  tm-binance-close-long.user.js
config/: README.md  config.example.yaml
deploy/: README.md
deploy/systemd/: README.md  binance-exit-executor.env.example  binance-exit-executor.service  vibe-quant.service
docs/: README.md  configuration.md  deployment.md  operator-safety.md  production-validation.md  regression-evidence.md  release.md  troubleshooting.md
docs/releases/: v0.1.0.md
memory-bank/: README.md  architecture.md  design-document.md  implementation-plan.md  mvp-scope.md  progress.md  tech-stack.md
skills/binance-exit-executor-release/: SKILL.md
skills/binance-exit-executor-review/: SKILL.md
skills/vibe-quant-release/: SKILL.md
skills/vibe-quant-review/: SKILL.md
src/: README.md  __init__.py  main.py  models.py
src/config/: README.md  loader.py  models.py
src/exchange/: README.md  adapter.py
src/execution/: README.md  engine.py
src/notify/: README.md  __init__.py  bot.py  (+2 more)
tests/: README.md  test_config.py  test_exchange.py  test_execution.py  test_logger.py  test_main_shutdown.py  test_market_recorder.py  test_min_notional_reduce_only.py  test_notify_telegram.py  test_order_cleanup.py  test_pause_manager.py  test_post_only_retry.py  test_pressure_stats.py  test_protective_stop.py  test_risk_manager.py  test_signal.py  test_telegram_bot.py  test_ws_market.py  test_ws_user_data.py
(+15 files in other folders)
