[project]
name = "vibe-quant"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiohttp>=3.9.0",
  "ccxt>=4.0.0",
  "loguru>=0.7.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0,<1.0",
  "pytest-cov>=4.0.0",
]

[tool.uv]
package = false
